# sap-mcm-client

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  auth.go  auth_test.go  class_test.go  client.go  client_test.go  decimal.go  domain-specific-terms.txt  enums.go  go.mod  instance.go  instance_test.go  model.go  model_test.go  odata.go  odata_test.go  pyproject.toml  requirements.txt  service_classes.go  service_models.go  tox.ini
.github/workflows/: go-lint.yml
docs/: SPECS_ANALYSIS.md
docs/examples/: batch-patch-instance.http
mcm/: auth.go  auth_test.go  class.go  class_test.go  client.go  client_test.go  decimal.go  decimal_test.go  doc.go  enums_test.go  errors.go  errors_test.go  instance_processdata.go  instance_test.go  logging_test.go  migration.go  migration_test.go  model_test.go  odata.go  odata_test.go  service_classes.go  service_instances.go  service_migration.go  service_migration_test.go  service_models.go  service_timeseries.go  service_timeseries_test.go  timeseries.go  timeseries_test.go
scripts/: record_responses.py
specs/: ANALYSIS.md  mcm-concept-class.json  mcm-concept-model.json  mcm-instance-migration-v1.1.0.json  mcm-instance.json  time-series.json
specs/metadata/: mcm-concept-class.edmx  mcm-concept-model.edmx  mcm-instance-migration.edmx  mcm-instance.edmx  time-series.edmx
src/sap_mcm_client/: __init__.py  _auth.py  _client.py  _errors.py  _odata.py  _resources.py  enums.py  types_actions.py  types_class.py  types_common.py  types_instance.py  types_migration.py  types_model.py  types_process_data.py  types_timeseries.py
src/sap_mcm_client/_resources/: __init__.py  _base.py  _classes.py  _instances.py  _migration.py  _models.py  _timeseries.py
testdata/: README.md  class_get.json  class_list.json  error_401.json  error_403.json  error_404.json  instance_get.json  instance_list.json  migration_instance_get.json  migration_response.json  migration_staged_list.json  model_get.json  model_list.json  timeseries_data.json
unittests/: .pylintrc  conftest.py  test_alias_consistency.py  test_alias_generator.py  test_auth.py  test_client.py  test_client_classes.py  test_client_instances.py  test_client_migration.py  test_client_models.py  test_client_timeseries.py  test_client_v02.py  test_enums.py  test_logging.py  test_odata.py  test_types.py  test_types_class.py  test_types_instance.py  test_types_migration.py  test_types_model.py  test_types_timeseries.py  test_types_v02.py
