[project]
name = "sap-mcm-client"
description = "Typed Python client for the SAP Cloud for Utilities Foundation Measurement Concept Management (MCM) APIs"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info+github@hochfrequenz.de" }]
keywords = ["sap", "mcm", "odata", "utilities", "measurement-concept"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2",
    # Upper bound is a test-tooling constraint, not a library one: the
    # aioresponses mock (used in the unit tests) does not yet support
    # aiohttp 3.14's ClientResponse signature (missing stream_writer arg).
    # Tracking: https://github.com/pnuckowski/aioresponses/issues/289
    # Lift once aioresponses releases aiohttp 3.14 compatibility.
    "aiohttp>=3.9,<3.14",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "aioresponses==0.7.8",
]
linting = [
    "pylint==4.0.6",
]
type_check = [
    "mypy==2.1.0",
]
spell_check = [
    "codespell==2.4.2",
]
coverage = [
    "coverage==7.14.1",
]
formatting = [
    "black==26.5.1",
    "isort==8.0.1",
]
packaging = [
    "build==1.5.0",
    "twine==6.2.0",
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/sap-mcm-client/releases"
Homepage = "https://github.com/Hochfrequenz/sap-mcm-client"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "duplicate-code",
    "line-too-long",
]

[tool.pytest.ini_options]
# pytest-asyncio in "auto" mode treats every ``async def test_*`` as an
# asyncio test, so individual tests need no ``@pytest.mark.asyncio`` marker.
asyncio_mode = "auto"

[tool.mypy]
disable_error_code = []
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# aioresponses ships no type stubs and is not PEP 561 typed.
module = ["aioresponses.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_sap_mcm_client_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
# Never ship the SAP OpenAPI specs (SAP IP, not redistributable). They are
# git-ignored and not committed, but exclude them defensively so a locally
# downloaded copy can never end up in a published source distribution.
exclude = ["/unittests", "/specs"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
